img tag's src attribute updated

--- a/mysong.html
+++ b/mysong.html
@@ -5,7 +5,7 @@
 <title>Vande Mataram - Wikipedia</title>
 </head>
 <body>
-	<p><img src="D:\index.png" alt="Vande Mataram"></p>
+	<p><img src="index.png" alt="Vande Mataram"></p>
   <h1 id="firstHeading" class="firstHeading" lang="en">Vande Mataram</h1>
 <table style="width: 70%;">
 
